# edgetpu_mvp

./: export.py  infer.py  requirements.txt  train.py
infer/: CMakeLists.txt  build.sh  main.cpp
